--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,12 @@
 {
-  "dependencies": {
-    "express": "^4.21.2"
-  }
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
